tests/snapshots/snapshots__pipeline@mask_escapes_only_handler.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/mask_escapes_only_handler.pr
---
== tokens ==
VOpen Effect UIdent("E") VOpen Ctl Ident("op") LParen KwInt RParen Colon KwInt VClose VSemi Fn Ident("f") LParen RParen Eq VOpen Handle Mask Lt UIdent("E") Gt LParen Ident("op") LParen Int(IntLit { value: 1, suffix: None }) RParen RParen With VOpen Ident("op") LParen Ident("x") Comma Ident("k") RParen FatArrow Ident("k") LParen Ident("x") RParen VSemi Return Ident("r") FatArrow Ident("r") VClose VClose VSemi Fn Ident("main") LParen RParen Colon Bang LBrace UIdent("IO") RBrace KwUnit Eq Ident("println") LParen Ident("f") LParen RParen RParen VClose

== ast ==
Program {
    types: [],
    effects: [
        EffectDecl {
            name: "E",
            params: [],
            ops: [
                EffOp {
                    name: "op",
                    params: [
                        Int,
                    ],
                    ret: Int,
                    grade: Many,
                },
            ],
            span: 262..290,
        },
    ],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "f",
            params: [],
            ret: None,
            eff: None,
            constraints: [],
            body: Spanned {
                node: Handle(
                    Spanned {
                        node: Mask(
                            "E",
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "op",
                                        ),
                                        span: 318..320,
                                    },
                                    [
                                        Spanned {
                                            node: Int(
                                                IntLit {
                                                    value: 1,
                                                    suffix: None,
                                                },
                                            ),
                                            span: 321..322,
                                        },
                                    ],
                                ),
                                span: 318..323,
                            },
                        ),
                        span: 310..324,
                    },
                    [
                        Op(
                            "op",
                            [
                                "x",
                            ],
                            "k",
                            Spanned {
                                node: Call(
                                    Spanned {
                                        node: Var(
                                            "k",
                                        ),
                                        span: 346..347,
                                    },
                                    [
                                        Spanned {
                                            node: Var(
                                                "x",
                                            ),
                                            span: 348..349,
                                        },
                                    ],
                                ),
                                span: 346..350,
                            },
                        ),
                        Return(
                            "r",
                            Spanned {
                                node: Var(
                                    "r",
                                ),
                                span: 367..368,
                            },
                        ),
                    ],
                ),
                span: 303..368,
            },
            wheres: [],
            span: 292..368,
        },
        Decl {
            name: "main",
            params: [],
            ret: Some(
                Unit,
            ),
            eff: Some(
                [
                    EffLabel {
                        name: "IO",
                        args: [],
                    },
                ],
            ),
            constraints: [],
            body: Spanned {
                node: Call(
                    Spanned {
                        node: Var(
                            "println",
                        ),
                        span: 395..402,
                    },
                    [
                        Spanned {
                            node: Call(
                                Spanned {
                                    node: Var(
                                        "f",
                                    ),
                                    span: 403..404,
                                },
                                [],
                            ),
                            span: 403..406,
                        },
                    ],
                ),
                span: 395..407,
            },
            wheres: [],
            span: 370..407,
        },
    ],
}

== types ==
Type Error: in `main`: effect `E` not declared in annotation
    ╭─[ <source>:13:26 ]
    │
 13 │ fn main() : !{IO} Unit = println(f())
    │                          ──────┬─────  
    │                                ╰─────── in `main`: effect `E` not declared in annotation
────╯
